<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nickwelna.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <TextView
            style="@style/QuizHeader"
            android:layout_width="wrap_content"
            android:text="@string/quiz_header" />

        <TextView
            style="@style/QuizQuestionHeader"
            android:layout_width="wrap_content"
            android:text="@string/question_1_header" />

        <TextView
            style="@style/QuizQuestionBody"
            android:layout_width="wrap_content"
            android:text="@string/question_1" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/answer_1_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer_hint_text"
                android:inputType="number"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/QuizQuestionHeader"
            android:layout_width="wrap_content"
            android:text="@string/question_2_header" />

        <TextView
            style="@style/QuizQuestionBody"
            android:layout_width="wrap_content"
            android:text="@string/question_2_body" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_answer"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_answer"
                android:textSize="14sp" />
        </RadioGroup>

        <TextView
            style="@style/QuizQuestionHeader"
            android:layout_width="wrap_content"
            android:text="@string/question_3_header" />

        <TextView
            style="@style/QuizQuestionBody"
            android:layout_width="wrap_content"
            android:text="@string/question_3_body" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saint_paul_answer_text" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waseca_answer_text" />

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duluth_answer_text" />

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/morris_answer_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mankato_answer_text" />

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crookston_answer_text" />

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minneapolis_answer_text" />

                <CheckBox
                    android:id="@+id/checkBox8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rochester_answer_text" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/QuizQuestionHeader"
            android:layout_width="wrap_content"
            android:text="@string/question_4_header" />

        <TextView
            style="@style/QuizQuestionBody"
            android:layout_width="wrap_content"
            android:text="@string/question_4_body" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/answer_2_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer_hint_text"
                android:inputType="text"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_button_text" />

            <TextView
                android:id="@+id/textView"
                style="@style/QuizResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/button"
                android:text="@string/score_text" />

            <TextView
                android:id="@+id/message"
                style="@style/QuizResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/textView" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>
